# pq-enclave-binding

./: CLAUDE.md  Cargo.toml  Containerfile  Procfile  README.md  caution.hcl  demo-spec.md
.cargo/: config.toml
.caution/: deployment.json
crates/pq-bundle/: Cargo.toml
crates/pq-bundle/src/: lib.rs
crates/pq-ceremony/: Cargo.toml
crates/pq-ceremony/src/: lib.rs  main.rs
crates/pq-cli/: Cargo.toml
crates/pq-cli/src/: main.rs
crates/pq-core/: Cargo.toml
crates/pq-core/src/: lib.rs
crates/pq-derive/: Cargo.toml
crates/pq-derive/src/: lib.rs
crates/pq-enclave/: Cargo.toml
crates/pq-enclave/src/: lib.rs
crates/pq-merkle/: Cargo.toml
crates/pq-merkle/src/: lib.rs
crates/pq-ots/: Cargo.toml
crates/pq-ots/src/: http.rs  lib.rs
crates/pq-quote/: Cargo.toml
crates/pq-quote/src/: lib.rs
crates/pq-subkey/: Cargo.toml
crates/pq-subkey/src/: lib.rs
demo/: run_demo.sh
docs/superpowers/plans/: 2026-06-23-subkey-precommit-signing-oracle.md
