[workspace]
resolver = "2"
members = [
    "crates/pq-core",
    "crates/pq-bundle",
    "crates/pq-enclave",
    "crates/pq-ots",
    "crates/pq-quote",
    "crates/pq-cli",
    "crates/pq-ceremony",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
