[package]
name = "pq-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Post-quantum (ML-DSA + SLH-DSA) root key generation and dual-signing for the PQ enclave-binding demo"

[dependencies]
fips204 = "0.4"
fips205 = "0.4"
sha2 = { workspace = true }
thiserror = { workspace = true }
rand_chacha = { workspace = true }

[lints]
workspace = true
