[package]
name = "pq-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic PQ key derivation from a BIP-39 mnemonic via keyfork's SLIP-0010 tree."

[dependencies]
pq-core = { path = "../pq-core" }
keyfork-mnemonic = { version = "0.4", registry = "distrust", default-features = false }
keyfork-derive-util = { version = "0.2", registry = "distrust", default-features = false }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
