[package]
name = "pq-quote"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "AWS Nitro NSM attestation (COSE_Sign1) parsing and verification for the PQ enclave-binding demo"

[dependencies]
pq-bundle = { path = "../pq-bundle" }
nsm-nitro-enclave-utils = { version = "0.1", default-features = false, features = ["verify"] }
# Transitive of nsm-nitro-enclave-utils; kept explicit. Capped at 0.2.x — 0.3 is
# still a prerelease (0.3.0-rc). nsm-nitro-enclave-utils 0.1.3 dropped the old
# `builder`-feature requirement, so the previous `=0.2.4` pin is no longer needed.
x509-cert = "0.2"
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_bytes = "0.11"

[lints]
workspace = true
